# parallel-metal

./: Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md
crates/parallel-metal/: Cargo.toml
crates/parallel-metal-ir/: Cargo.toml
crates/parallel-metal-ir/src/: expr.rs  kernel.rs  lib.rs  statement.rs  types.rs
crates/parallel-metal-macros/: Cargo.toml
crates/parallel-metal-macros/src/: expand.rs  lib.rs  lower.rs  syntax.rs
crates/parallel-metal/examples/: matmul.rs  pixels.rs  shader.rs  xor.rs
crates/parallel-metal/src/: error.rs  extent.rs  lib.rs  runtime.rs  tensor.rs
crates/parallel-metal/tests/: gpu_elementwise.rs  gpu_matmul.rs
