[package]
name = "parallel-metal-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
parallel-metal-ir.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
