[package]
name = "parallel-metal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust-shaped data-parallel compute for Apple Metal"

[dependencies]
parallel-metal-macros.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33.0"
objc = "0.2.7"
